fixing import popover visibility bug

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -197,7 +197,7 @@ html, body {
 
 #element_edit{
   top: 100px;
-  left: 25px;
+  left: 70%;
   position: fixed;
   max-height: 70%;
   background-color : #FFFFFF;
